--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,16 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+flutter_native_splash:
+  color: "#1A5175"
+  image: assets/images/poke_logo.png
+  android: true
+  ios: true
+  web: false
+  
+  android_12:
+    color: "##1A5175"
+    image: assets/images/poke_logo.png
+    icon_background_color: "#1A5175"
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
